<resources>
    <string name="app_name">Data Hub Monitoring</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="wifi"> » WIFI </string>
    <string name="sensor"> » Sensor </string>
    <string name="actuator"> » Actuator </string>
    <string name="command"> » Command </string>
    <string name="experiment"> » Experiment </string>
    <string name="visualization"> » Visualization </string>
    <string name="monitoring"> » Monitoring </string>
    <string name="reproduction"> Reproduction </string>
    <string name="wifi_th_network_name">Network Name</string>
    <string name="wifi_th_signal_strength">Signal Strength</string>
    <string name="wifi_th_link_speed">Link Speed</string>
    <string name="wifi_th_security">Security</string>
    <string name="wifi_th_select">Select</string>
    <string name="sensor_th_variable_name">Variable Name</string>
    <string name="sensor_th_data_type">Data Type</string>
    <string name="sensor_th_number_of_channels">Number of channels</string>
    <string name="sensor_th_monitoring_esp_tx">Monitoring(ESP TX)</string>
    <string name="sensor_th_real_time_control_esp_rx_rt">Real-time control(ESP RX RT)</string>
    <string name="sensor_settings_title">Sensor Settings</string>
    <string name="sensor_th_order">Order</string>
    <string name="actuator_settings_title">Actuator Settings</string>
    <string name="command_code_hex">Command Code (Hex)</string>
    <string name="command_time_1_float">Time 1(Float)</string>
    <string name="command_time_2_float">Time 2 (Float)</string>
    <string name="command_setting_threshold">Setting Threshold</string>
    <string name="command_settings_title">Command Settings</string>
    <string name="sensor_number_of_bytes_th">Number of Bytes</string>
    <string name="sensor_monitoring_th">Monitoring</string>
    <string name="sensor_realtime_control_th">Realtime Control</string>
    <string name="wifi_setting_screen_title">WIFI Access and Connection</string>
    <string name="wifi_auto_connect">Auto Connect</string>
    <string name="save_btn">Save</string>
    <string name="load_btn">Load</string>
    <string name="add_btn">Add</string>
    <string name="sensor_load_command_settings">Load Command Settings</string>
    <string name="sensor_command_settings_update">Command Settings Update</string>
    <string name="sensor_esp_tx_upgrade">ESP TX Upgrade</string>
    <string name="sensor_esp_rxrt_upgrade">ESP RXRT Upgrade</string>
    <string name="enter_ox_numbers">Enter Ox numbers</string>
    <string name="enter_the_number">Enter the number</string>
    <string name="threshold">Threshold</string>
    <string name="command_sequence_th">Sequence</string>
    <string name="command_code_th">Command Code</string>
    <string name="command_time_1_th">Time 1</string>
    <string name="command_time_2_th">Time 2</string>
    <string name="command_send_command_esp">Send Command ESP</string>
    <string name="esp_rxrt_basic_settings_title">ESP RXRT Basic Settings</string>
    <string name="protocol">Protocol</string>
    <string name="tcp">TCP</string>
    <string name="udp">UDP</string>
    <string name="crc">CRC</string>
    <string name="number_of_bytes_th">Number of bytes</string>
    <string name="add_custom">Add custom</string>
    <string name="load_sensors">Load Sensors</string>
    <string name="load_actuators">Load Actuators</string>
    <string name="esp_tx_basic_settings_title">ESP TX Basic Settings</string>
    <string name="outliers">Outliers</string>
    <string name="experiment_settings_title">Experiment Settings</string>
    <string name="type_here">Type here</string>
    <string name="set1">SET1</string>
    <string name="set2">SET2</string>
    <string name="set3">SET3</string>
    <string name="set4">SET4</string>
    <string name="command_selection">Command selection</string>
    <string name="n_trials">N Trials</string>
    <string name="rest">Rest</string>
    <string name="rest_random">Rest-Random</string>
    <string name="pre_run">Pre-Run</string>
    <string name="post_run">Post-Run</string>
    <string name="run_time">Run-Time</string>
    <string name="enter_the_total_number_of_commands">Enter the total number of commands</string>
    <string name="enter_command_time_in_0_1_degree_increments">Enter Command Time (in 0.1 degree increments)</string>
    <string name="enter_rest_time_in_0_1_degree_increments">Enter Rest Time (in 0.1 degree increments)</string>
    <string name="enter_rest_random_time_in_0_1_degree_increments">Enter Rest Random Time (in 0.1 degree increments)</string>
    <string name="enter_time_in_0_1_degree_increments">Enter time (in 0.1 degree increments)</string>
    <string name="about_1_run_ndisplay_of_required_time">About 1 Run\nDisplay of required time</string>
    <string name="update">Update</string>
    <string name="monitoring_title">Monitoring</string>
    <string name="monitoring_control">Monitoring Control</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="experiment_set">Experiment Set</string>
    <string name="command_set">Command Set</string>
    <string name="set_1">Set 1</string>
    <string name="set_2">Set 2</string>
    <string name="set_3">Set 3</string>
    <string name="set_4">Set 4</string>
    <string name="log">Log</string>
    <string name="log_message">Log message</string>
    <string name="data_playback_title">Data Playback</string>
    <string name="loading_data">Loading Data</string>
    <string name="playback_control">Playback Control</string>
    <string name="time_control">Time control</string>
    <string name="_1s">+1s</string>
    <string name="minus_1s">-1s</string>
    <string name="plus_1s">+1s</string>
    <string name="plus_10s">+10s</string>
    <string name="minus_10s">-10s</string>
    <string name="next_ncommand">Next\nCommand</string>
    <string name="previous_ncommand">Previous\nCommand</string>
    <string name="order_type">Order/Type</string>
    <string name="channel">Channel</string>
    <string name="cancel">Cancel</string>
    <string name="initial_value">Initial Value</string>
    <string name="upper_limit">Upper Limit</string>
    <string name="lower_limit">Lower Limit</string>
    <string name="active">Active</string>
    <string name="outlier">Outlier</string>
    <string name="comparison">Comparison</string>
    <string name="activate">Activate</string>
    <string name="please_select_a_wifi_network">Please select a wifi network</string>
    <string name="password_entered">"Password entered: "</string>
    <string name="update_success">Update success</string>
    <string name="location_permission_is_not_granted">Location Permission is not granted.</string>
    <string name="update_failed">Update Failed</string>
    <string name="data_saved">Data Saved!</string>
    <string name="deleted_successfully">Deleted Successfully!</string>
    <string name="delete_failed">Delete failed</string>
    <string name="no_command_to_send">No command to send</string>
    <string name="insert_success">Insert success!</string>
    <string name="insert_failed">Insert failed!</string>
    <string name="confirm">Confirm</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_commands_yet">No commands yet!</string>
    <string name="select_commands">Select Commands</string>
    <string name="ok">OK</string>
    <string name="selected">SELECTED</string>
    <string name="please_enter_the_experiment_title">Please enter the experiment title</string>
    <string name="are_you_sure_you_want_to_save_this_data">Are you sure you want to save this data?</string>
    <string name="can_t_find_the_corresponding_experiment_data">Can\'t find the corresponding Experiment Data</string>
    <string name="loaded_experiment_data_successfully">Loaded Experiment Data successfully!</string>
    <string name="no_records_found">No records found</string>
    <string name="record_loaded_successfully">Record loaded successfully.</string>
    <string name="you_need_to_save_the_visualization_setting_first_before_completing">You need to save the visualization setting first before completing</string>
    <string name="enter_visualization_setting_title">Enter Visualization Setting Title</string>
    <string name="esp_tx">» ESP TX</string>
    <string name="esp_rxrt">» ESP RXRT</string>
    <string name="playback">» Playback</string>
    <string name="enter_actuator_setting_title">Enter Actuator Setting Title</string>
    <string name="enter_sensor_setting_title">Enter Sensor Setting Title</string>
    <string name="please_enter_the_title_first">Please Enter The Title First!</string>
    <string name="sensor_setting_saved_successfully">Sensor Setting Saved Successfully.</string>
    <string name="unexpected_error_occurred_please_load_and_check">Unexpected error occurred. Please load and check.</string>
    <string name="an_error_occurred_while_saving_please_load_and_check">An error occurred while saving. Please load and check.</string>
    <string name="esp_packet">» ESP Packet</string>
    <string name="set_data_saved_successfully">Set Data saved successfully.</string>
    <string name="updated_data_successfully">Updated data successfully.</string>
    <string name="failed_to_update_data">Failed to update data.</string>
    <string name="saved_data_successfully">Saved data successfully.</string>
    <string name="failed_to_save_data">Failed to save data.</string>
    <string name="inserted_esp_packet_setting_successfully">Inserted ESP Packet setting successfully</string>
    <string name="order">Order</string>
    <string name="save">Save</string>
    <string name="save_set_data">Save Set Data</string>
    <string name="enter_esp_packet_setting_title">Enter ESP Packet Setting Title</string>
    <string name="crc_upper">CRC</string>
    <string name="actions">Actions</string>
    <string name="variable_name_ndata_type">Variable Name/\nData Type</string>
    <string name="channel_norder">Channel\nOrder</string>
    <string name="setting_thresholds">Setting Thresholds</string>
    <string name="threshold_nenable">Threshold\nEnable</string>
    <string name="outlier_settings">Outlier Settings</string>
    <string name="outliers_nenable">Outliers\nEnable</string>
    <string name="initial">Initial</string>
    <string name="lower">Lower</string>
    <string name="upper">Upper</string>
    <string name="compare">Compare</string>
    <string name="there_is_no_threshold_data_now">⚠️ There is no threshold data now.</string>
    <string name="there_is_esp_packet_settings_now">⚠️ There is ESP packet settings now.</string>
    <string name="sample_rate">Sample Rate</string>
    <string name="block_size">Block Size</string>
    <string name="buffer_size">Buffer Size</string>
    <string name="sps_unit">SPS Unit</string>
    <string name="int_unit">Int unit</string>
    <string name="_0">0</string>
    <string name="ms_unit_notation">ms unit notation</string>
    <string name="sec_unit_notation">Sec unit notation</string>
    <string name="setup_complete">Setup Complete</string>
    <string name="nchannels">NChannels</string>
    <string name="nbyte">NByte</string>
    <string name="visualization_label">Visualization</string>
    <string name="y_axis_range">Y-axis range</string>
    <string name="there_is_no_visualization_setting_now">⚠️ There is no visualization setting now.</string>
    <string name="save_format">Save Format</string>
    <string name="set_save_path_and_name">Set save path and name</string>
    <string name="bin">bin</string>
    <string name="h5">h5</string>
    <string name="csv">CSV</string>
</resources>