<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
<!--    <item android:id="@+id/nav_home" android:title="Home" android:icon="@android:drawable/ic_menu_view"/>-->
<!--    <item android:id="@+id/nav_settings" android:title="Settings" android:icon="@android:drawable/ic_menu_preferences"/>-->
<!--    <item android:id="@+id/nav_wifi" android:title="WiFi" />-->
    <item android:id="@+id/wifi_menu_item" android:enabled="true" android:title="@string/wifi" />
    <item android:id="@+id/sensor_menu_item" android:enabled="true" android:title="@string/esp_packet"/>
    <item android:id="@+id/command_menu_item" android:enabled="true" android:title="@string/command"/>
    <item android:id="@+id/esp_tx_menu_item" android:enabled="true" android:title="@string/esp_tx" />
    <item android:id="@+id/esp_rxrt_menu_item" android:enabled="true" android:title="@string/esp_rxrt"/>
    <item android:id="@+id/experiment_menu_item" android:enabled="true" android:title="@string/experiment"/>
    <item android:id="@+id/visualization_menu_item" android:enabled="true" android:title="@string/visualization"/>
    <item android:id="@+id/monitoring_menu_item" android:enabled="true" android:title="@string/monitoring"/>
    <item android:id="@+id/reproduction_menu_item" android:enabled="true" android:title="@string/playback"/>


</menu>