<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:padding="30dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="3"
            android:orientation="horizontal">

            <AutoCompleteTextView
                android:id="@+id/visualization_id_autocomplete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enter_visualization_setting_title"
                android:layout_gravity="center_vertical"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:backgroundTint="@color/bs_info"
                android:completionThreshold="2"
                android:inputType="text" />
            <com.google.android.material.button.MaterialButton
                style="@style/RoundedMaterialButton"
                android:backgroundTint="@color/bs_success"
                android:id="@+id/visualization_save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/basic_button_text_color"
                android:layout_margin="16dp"
                android:text="@string/save"/>

            <com.google.android.material.button.MaterialButton
                style="@style/RoundedMaterialButton"
                android:backgroundTint="@color/bs_primary"
                android:id="@+id/visualization_load_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/basic_button_text_color"
                android:layout_margin="16dp"
                android:text="@string/load_btn"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="4"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:text="@string/sample_rate"
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginTop="6dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:text="@string/block_size"
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginVertical="25dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:text="@string/buffer_size"
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/visualization_sample_rate_text"
                    android:autofillHints=""
                    android:backgroundTint="@color/bs_info"
                    android:layout_width="match_parent"
                    android:hint="@string/sps_unit"
                    android:inputType="number"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/visualization_block_size_text"
                    android:layout_width="match_parent"
                    android:autofillHints=""
                    android:backgroundTint="@color/bs_info"
                    android:inputType="number"
                    android:hint="@string/int_unit"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/visualization_buffer_size_text"
                    android:autofillHints=""
                    android:hint="@string/int_unit"
                    android:inputType="number"
                    android:backgroundTint="@color/bs_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/visualization_sample_rate_view"
                    android:text="@string/_0"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_marginTop="6dp"
                    android:textSize="18sp"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/visualization_block_size_view"
                    android:text="@string/_0"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:textSize="18sp"
                    android:layout_marginVertical="25dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:text="@string/_0"
                    android:id="@+id/visualization_buffer_size_view"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:textSize="18sp"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <EditText
                    android:layout_width="match_parent"
                    android:autofillHints=""
                    android:visibility="invisible"
                    android:inputType="number"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/visualization_ms_block_size_text"
                    android:autofillHints=""
                    android:hint="@string/ms_unit_notation"
                    android:backgroundTint="@color/bs_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
                <EditText
                    android:id="@+id/visualization_sec_buffer_size_text"
                    android:autofillHints=""
                    android:hint="@string/sec_unit_notation"
                    android:backgroundTint="@color/bs_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <Spinner
                android:id="@+id/visualization_esp_packet_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text" />
            <com.google.android.material.button.MaterialButton
                style="@style/RoundedMaterialButton"
                android:backgroundTint="@color/bs_info"
                android:id="@+id/visualization_setup_complete_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/basic_button_text_color"
                android:layout_margin="16dp"
                android:visibility="invisible"
                android:text="@string/setup_complete"/>

        </LinearLayout>


        <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*"
                android:id="@+id/visualization_list_tb"
                >
                <TableRow android:background="@color/bs_primary">
                    <TextView
                        android:text="@string/order"
                        android:textColor="@android:color/white"
                        android:padding="8dp"
                        android:gravity="center"
                        android:textStyle="bold"/>
                    <TextView
                        android:text="@string/sensor_th_variable_name"
                        android:textColor="@android:color/white"
                        android:gravity="center"
                        android:padding="8dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:text="@string/sensor_th_data_type"
                        android:textColor="@android:color/white"
                        android:padding="8dp"
                        android:gravity="center"
                        android:textStyle="bold"/>

                    <TextView
                        android:text="@string/nchannels"
                        android:textColor="@android:color/white"
                        android:gravity="center"
                        android:padding="8dp"
                        android:textStyle="bold"/>
                    <TextView
                        android:text="@string/nbyte"
                        android:textColor="@android:color/white"
                        android:padding="8dp"
                        android:gravity="center"
                        android:textStyle="bold"/>
                    <TextView
                        android:text="@string/visualization_label"
                        android:textColor="@android:color/white"
                        android:padding="8dp"
                        android:gravity="center"
                        android:textStyle="bold"/>
                    <TextView
                        android:text="@string/y_axis_range"
                        android:textColor="@android:color/white"
                        android:padding="8dp"
                        android:gravity="center"
                        android:textStyle="bold"/>
                    <TextView
                        android:text="@string/upper_limit"
                        android:textColor="@android:color/white"
                        android:padding="8dp"
                        android:gravity="center"
                        android:textStyle="bold"/>
                    <TextView
                        android:text="@string/lower_limit"
                        android:textColor="@android:color/white"
                        android:padding="8dp"
                        android:gravity="center"
                        android:textStyle="bold"/>
                </TableRow>

                <TableRow
                    android:background="@drawable/table_border">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="10"
                        android:text="@string/there_is_no_visualization_setting_now"
                        android:textColor="@android:color/black"
                        android:gravity="center"
                        android:padding="16dp"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </TableRow>

            </TableLayout>
            </ScrollView>
            </HorizontalScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="6"
            android:gravity="center"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/save_format" />
            <RadioGroup
                android:id="@+id/visualization_save_format_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="16dp">

                <RadioButton
                    android:id="@+id/visualization_save_format_bin_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="6dp"
                    android:text="@string/bin" />

                <RadioButton
                    android:id="@+id/visualization_save_format_h5_radio"
                    android:layout_width="wrap_content"
                    android:layout_marginHorizontal="6dp"
                    android:layout_height="wrap_content"
                    android:text="@string/h5" />

                <RadioButton
                    android:id="@+id/visualization_save_format_csv_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginHorizontal="6dp"
                    android:text="@string/csv" />
            </RadioGroup>
            <EditText
                android:id="@+id/visualization_save_path_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:autofillHints=""
                android:backgroundTint="@color/bs_info"
                android:hint="@string/set_save_path_and_name"
                android:inputType="text" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>