<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:padding="16dp"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:minHeight="500dp"
            android:id="@+id/command_threshold_edit_table"
            android:gravity="top"
            >
            <TableRow
                android:background="@color/bs_primary">
                <TextView
                    android:padding="16dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/order_type">
                </TextView>
                <TextView
                    android:padding="16dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/channel">
                </TextView>
                <TextView
                    android:padding="16dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/threshold">
                </TextView>

            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            >
            <Button
                android:id="@+id/command_threshold_save_btn"
                android:layout_width="150dp"
                android:background="@drawable/ripple_success_button"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textColor="@color/basic_button_text_color"
                android:text="@string/save_btn"
                android:padding="8dp" />
            <Button
                android:id="@+id/command_close_threshold_modal_btn"
                android:layout_width="150dp"
                android:background="@drawable/ripple_info_button"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/cancel"
                android:textColor="@color/basic_button_text_color"
                android:padding="8dp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>