<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="16dp"
        android:layout_height="wrap_content"
        >
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:minHeight="200dp"
            android:id="@+id/esp_rxrt_thresholds_edit_tb"
            android:gravity="top"
            >
            <TableRow
                android:background="@color/bs_primary">
                <TextView
                    android:padding="16dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/sensor_th_variable_name">
                </TextView>
                <TextView
                    android:padding="16dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/sensor_th_data_type">
                </TextView>
                <TextView
                    android:padding="16dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/sensor_th_number_of_channels">
                </TextView>

            </TableRow>
            <TableRow>
                <EditText
                    android:id="@+id/esp_rx_rt_variable_name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp" />
                <Spinner
                    android:id="@+id/esp_rx_rt_data_type_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:padding="8dp" />
                <EditText
                    android:id="@+id/esp_rx_rt_channel_count_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:padding="8dp" />


            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            >
            <Button
                android:id="@+id/esp_rxrt_save_btn"
                android:layout_width="150dp"
                android:backgroundTint="@color/bs_success"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/save_btn"
                android:padding="8dp" />
            <Button
                android:id="@+id/esp_rxrt_close_add_custom_dialog_btn"
                android:layout_width="150dp"
                android:backgroundTint="@color/bs_secondary"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/cancel"
                android:padding="8dp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>